<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Hotel_Test</string>
    <string name="hotels_not_found">Отелей не найдено</string>
    <string name="button_choose_room_text">К выбору номера</string>
    <string name="_134_673">от 134 673 ₽</string>
    <string name="purchase_for">за тур с перелётом</string>
    <string name="about_hotel_text">Об отеле</string>
    <string name="about_hotel_text_desctiption">Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!</string>
    <string name="facilities">Удобства</string>
    <string name="neccesary_text">Самое необходимое</string>
    <string name="what_included">Что включено</string>
    <string name="what_not_included">Что не включено</string>
    <string name="in_more_details_text">Подробнее</string>
    <string name="in_more_details_about_number">Подробнее о номере</string>
    <string name="_186_600">186 600 ₽</string>
    <string name="purchase_for_room">за 7 ночей с перелётом</string>
    <string name="choose_number_button_text">Выбрать номер</string>
    <string name="hotel_name_in_reservation">Steigenberger Makadi</string>
    <string name="address_of_hotel_reservation">Madinat Makadi, Safaga Road, Makadi Bay, Египет</string>
    <string name="departure_from_title">Вылет из</string>
    <string name="departure_from_descr">Санкт-Петербург</string>
    <string name="arrival_to_title">Страна, город</string>
    <string name="arrival_to_descr">Египет, Хургада</string>
    <string name="date_title">Даты</string>
    <string name="date_desct">19.09.2023 – 27.09.2023</string>
    <string name="nights_amount_title">Кол-во ночей</string>
    <string name="nights_amount_descr">7 ночей</string>
    <string name="hotel_name_title">Отель</string>
    <string name="hotel_name_descr">Steigenberger Makadi</string>
    <string name="hotel_room_title">Номер</string>
    <string name="hotel_room_descr">Стандартный с видом на бассейн или сад</string>
    <string name="nutrition_title">Питание</string>
    <string name="nutrition_descr">Все включено</string>
    <string name="costumer_info_title">Информация о покупателе</string>
    <string name="costumer_info_title_text">Информация о покупателе</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="email_field_hint">Почта</string>
    <string name="costumer_info_text_about_your_data">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="first_tourist_title">Первый турист</string>
    <string name="name_text_field_hint">Имя</string>
    <string name="here_will_be_consumer_s_name">Here will be consumer\'s name</string>
    <string name="costumer_surname">Фамилия</string>
    <string name="here_will_be_consumer_s_surname">Here will be consumer\'s surname</string>
    <string name="add_tourist_title">Добавить туриста</string>
    <string name="price_of_tour_title">Тур</string>
    <string name="price_tour_text">186 600 ₽</string>
    <string name="fuel_charge_title">Топливный сбор</string>
    <string name="fuel_charge_text">9 300 ₽</string>
    <string name="service_charge_title">Сервисный сбор</string>
    <string name="service_charge_text">2 136 ₽</string>
    <string name="to_payment_title">К оплате</string>
    <string name="to_payment_text">198 036 ₽</string>
    <string name="to_payment_button_text">Оплатить 198 036 ₽</string>
    <string name="hotel_room_name">Steigenberger Makadi</string>
    <string name="hotel_fragment_name">Отель</string>
    <string name="reservation_fragment_name">Бронирование</string>
    <string name="paid_fragment_name">Заказ оплачен</string>
    <string name="hotel_name">Steigenberger Makadi</string>
    <string name="hotel_address">Madinat Makadi, Safaga Road, Makadi Bay, Египет</string>
    <string name="date_start">19.09.2023</string>
    <string name="date_finish">27.09.2023</string>
    <string name="dash">-</string>
    <string name="retry">Retry</string>
    <string name="try_again">Try again</string>
    <string name="something_went_wrong_try_again">Something went wrong. Try again</string>
    <string name="reservation_loading_error">Reservation loading error</string>
    <string name="hotels_loading_error">Hotels loading error</string>
    <string name="rooms_loading_error">Rooms loading error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="chip">Chip</string>
    <string name="paid_text_super">Супер!</string>
</resources>