<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/something_went_wrong_try_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@id/ratingView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/circleIndicatorHotel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="@id/viewPager2" />

        <ru.testapp.hotel_test.util.RatingView
            android:id="@+id/ratingView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPager2"
            app:score="5" />

        <TextView
            android:id="@+id/hotelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/medium_500"
            android:text="@string/hotel_name"
            android:textColor="#000"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingView" />

        <TextView
            android:id="@+id/hotelAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/medium_500"
            android:text="@string/hotel_address"
            android:textColor="#0D72FF"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hotelName" />

        <TextView
            android:id="@+id/priceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/semibold_600"
            android:text="@string/_134_673"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hotelAddress" />

        <TextView
            android:id="@+id/priceForIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/regular_400"
            android:paddingBottom="4dp"
            android:text="@string/purchase_for"
            android:textColor="#828796"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/priceText"
            app:layout_constraintStart_toEndOf="@id/priceText" />

        <TextView
            android:id="@+id/aboutHotelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/medium_500"
            android:text="@string/about_hotel_text"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceForIt" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupHotel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:chipSpacingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutHotelTitle" />

        <TextView
            android:id="@+id/hotelDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/regular_400"
            android:text="@string/about_hotel_text_desctiption"
            android:textColor="#E6000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipGroupHotel" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/facilitiesCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/hotelDescription">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/facilitiesContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/facilitiesImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/emoji_happy" />

                <TextView
                    android:id="@+id/facilitiesTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/medium_500"
                    android:text="@string/facilities"
                    android:textColor="#2C3035"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/facilitiesUnderTitle"
                    app:layout_constraintStart_toEndOf="@id/facilitiesImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/facilitiesUnderTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/medium_500"
                    android:text="@string/neccesary_text"
                    android:textColor="#828796"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/facilitiesImage"
                    app:layout_constraintTop_toBottomOf="@id/facilitiesTitle" />

                <ImageButton
                    android:id="@+id/facilitiesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/to_next_fragment_arrow" />

                <androidx.constraintlayout.widget.Barrier
                    android:layout_width="275dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#828796"
                    android:elevation="0dp"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="facilitiesUnderTitle, facilitiesImage, facilitiesButton"
                    app:layout_constraintStart_toStartOf="@id/facilitiesTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/includedCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/facilitiesCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/includedContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp">

                <ImageView
                    android:id="@+id/includedImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/tick_square" />

                <TextView
                    android:id="@+id/includedTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/medium_500"
                    android:text="@string/what_included"
                    android:textColor="#2C3035"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/includedUnderTitle"
                    app:layout_constraintStart_toEndOf="@id/includedImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/includedUnderTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/medium_500"
                    android:text="@string/neccesary_text"
                    android:textColor="#828796"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/includedImage"
                    app:layout_constraintTop_toBottomOf="@id/includedTitle" />

                <ImageButton
                    android:id="@+id/includedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/to_next_fragment_arrow" />

                <androidx.constraintlayout.widget.Barrier
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#828796"
                    android:elevation="0dp"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="includedButton, includedImage, includedUnderTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/notIncludedCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/includedCard">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/notIncludedContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                android:paddingBottom="15dp">

                <ImageView
                    android:id="@+id/notIncludedImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/close_square" />

                <TextView
                    android:id="@+id/notIncludedTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/medium_500"
                    android:text="@string/what_not_included"
                    android:textColor="#2C3035"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/notIncludedUnderTitle"
                    app:layout_constraintStart_toEndOf="@id/notIncludedImage"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/notIncludedUnderTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:fontFamily="@font/medium_500"
                    android:text="@string/neccesary_text"
                    android:textColor="#828796"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/notIncludedImage"
                    app:layout_constraintTop_toBottomOf="@id/notIncludedTitle" />

                <ImageButton
                    android:id="@+id/notIncludedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/to_next_fragment_arrow" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toRoomFragmentButton"
            style="@style/NavButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="28dp"
            android:minHeight="60dp"
            android:text="@string/button_choose_room_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notIncludedCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>