<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerHotelRoom"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintBottom_toTopOf="@id/roomName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/circleIndicator"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="@id/viewPagerHotelRoom" />

        <TextView
            android:id="@+id/roomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/medium_500"
            android:text="Стандартный с видом на бассейн или сад"
            android:textColor="#000000"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPagerHotelRoom" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsGroupRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:chipSpacingHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roomName" />

        <androidx.cardview.widget.CardView
            android:id="@+id/inDetailsCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#220D72FF"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chipsGroupRoom">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp">

                <TextView
                    android:id="@+id/inDetailsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/medium_500"
                    android:text="@string/in_more_details_about_number"
                    android:textColor="#0D72FF"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/inDetailsArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/in_details_arrow" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/semibold_600"
            android:text="@string/_186_600"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inDetailsCard" />

        <TextView
            android:id="@+id/totalPriceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/regular_400"
            android:paddingBottom="4dp"
            android:text="@string/purchase_for_room"
            android:textColor="#828796"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/totalPrice"
            app:layout_constraintStart_toEndOf="@id/totalPrice" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/chooseNumberButton"
            style="@style/NavButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/choose_number_button_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
